<resources>
	<string name="app_name">Chinlai</string>
	<string name="password_show">Show</string>
	<string name="password_hide">Hide</string>
	<string name="next">Next</string>
	
	<string name="error_no_connection">Offline. Please enable your Internet connection</string>
	<string name="error_invalid_username_password">Your mobile number and password do not match</string>
	<string name="error_password_not_match">Password does not match</string>
	<string name="login_not_match">Invalid mobile number or password</string>
	<string name="keyboard_address" translatable="false">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789&amp;()-,./@#:</string>
	<string name="keyboard_city" translatable="false">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
	<string name="keyboard_car_reg_no" translatable="false">
        abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-
    </string>
	<string name="keyboard_mykad_organization" translatable="false">abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-/().:
    </string>
	<string name="keyboard_mykad" translatable="false">abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-*
    </string>
	<string name="keyboard_mykad_basic" translatable="false">abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
    </string>
	<string name="keyboard_mykad_no_asterisk" translatable="false">abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-
    </string>
	<string name="keyboard_mykad_passport_army_police" translatable="false">abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-/
    </string>
	<string name="keyboard_passport" translatable="false">abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-
    </string>
	<string name="keyboard_number_only" translatable="false">0123456789</string>
	<string name="keyboard_alphanumeric" translatable="false">
        abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
    </string>
	<string name="keyboard_name" translatable="false">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ`@()\'/.-
    </string>
	<string name="keyboard_username" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ`@()\'/.~!$%^-*_=+}{\
    </string>
	<string name="keyboard_username_new" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ
    </string>
	<string name="keyboard_password" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ!"#$%&amp;'()*+,-./:;&lt;=>?@[\]^_`{|}~
    </string>
	<string name="keyboard_email" translatable="false">abcdefghijklmnopqrstuvwxyz
        ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@~!$%^.&amp;*_=+}{\'?
    </string>
	<string name="login">Login</string>
	
	<!--Menu-->
	<string name="menu_transactions">Transactions</string>
	<string name="menu_help">Help &amp; Support</string>
	<string name="menu_about">About Us</string>
	<string name="menu_logout">Logout</string>
	<string name="menu_setting">Settings</string>
	<string name="menu_promotion">Promotion</string>
	<string name="username">Username</string>
	<string name="testLogin">Test Login</string>
	<string name="password">Password</string>
	<string name="title_activity_map">Map View</string>
	
	
	<!--Delivery-->
	<string name="delivery_all">All</string>
	<string name="delivery_pending">Pending</string>
	<string name="delivery_completed">Completed</string>
	<string name="title_activity_dashboard">DashboardActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="total_delivery_trips">Found %d Delivery Trips</string>
	<string name="my_delivery_trips">My Delivery Trips</string>
	<string name="profile">My Profile</string>
	<string name="logout">Logout</string>
	<string name="title_activity_profile">Profile</string>
	<string name="crm_name">CRM System \n Customer Login</string>
	<string name="crm_name_sales">CRM System \n Sales Login</string>
	<string name="title_activity_destination">VIew Destination</string>
	<string name="tab_destination_1">Information</string>
	<string name="tab_destination_2">Particulars</string>
	<string name="tab_destination_3">Photos</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="mark_complete">Mark \n Complete</string>
	<string name="map_view">Map \n View</string>
	<string name="update_photo">Update \n Photo</string>
	<string name="info_type">TYPE</string>
	<string name="info_DO">DELIVERY</string>
	<string name="info_GT">PICK-UP</string>
	<string name="info_qty">TOTAL QTY</string>
	<string name="info_tracking_no">TRACKING NO.</string>
	<string name="info_amount">AMOUNT</string>
	<string name="info_weight">WEIGHT</string>
	<string name="info_recipient">RECIPIENT NAME</string>
	<string name="info_contact">CONTACT_NO</string>
	<string name="info_address">ADDRESS</string>
	<string name="info_description">DESCRIPTION</string>
	<string name="info_no">No.</string>
	<string name="pick_photo">Select Photo</string>
	<string name="camera">Camera</string>
	<string name="gallery">Gallery</string>
	<string name="search_job_id">Search Job ID</string>
	<string name="view_delivery_trip">View Delivery Trip</string>
	<string name="chin_lai">CHIN LAI</string>
	<string name="crm_system">CRM SYSTEM</string>
	<string name="alert_update_documents">Confirm mark as complete?</string>
	<string name="no_waze_found">No Waze Found</string>
	<string name="select_navigation">Open Navigation With</string>
	<string name="google_maps">Google Maps</string>
	<string name="waze">Waze</string>
	<string name="no_map_found">No Google Map Application found</string>
	<string name="error_getting_response">Error getting response from server</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="contact_no">Contact No</string>
	<string name="address">Address</string>
	<string name="edit">Edit</string>
	<string name="sales_person">Salesperson Name</string>
	<string name="sales_person_contact">Salesperson Contact No</string>
	<string name="title_activity_reset_password">EDIT PASSWORD</string>
	<string name="current_password">Current Password</string>
	<string name="new_password">New Password</string>
	<string name="new_password_confirm">Confirm New Password</string>
	<string name="my_order">Order</string>
	<string name="my_invoice">Invoices</string>
	<string name="my_statement">Statement of Account</string>
	<string name="category">Category</string>
	<string name="product_list">Product List</string>
	<string name="search_item_name">Search SO No.</string>
	<string name="browse_product">Browse Product</string>
	<string name="download_multiple">Download Multiple?</string>
	<string name="download">Download</string>
	<string name="my_customers">My Customers</string>
	<string name="my_customer_list">My Customer List</string>
	<string name="confirm_select_customer">Confirm Select Customer?</string>
	<string name="reset_password">Reset Password</string>
	<string name="paid">PAID</string>
	<string name="unpaid">UNPAID</string>
	<string name="search_invoice">Search Inv No.</string>
	<string name="all">ALL</string>
	<string name="subtotal">SubTotal</string>
	<string name="taxes_not_included">(Taxes not included)</string>
	<string name="place_order">Place Order</string>
	<string name="details">Details:</string>
	<string name="add_to_cart">Add to Cart</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="quantity">Quantity</string>
	<string name="please_select_branch">Please Select Branch</string>
	<string name="cancel">Cancel</string>
	<string name="confirm">Confirm</string>
	<string name="type">Type</string>
	<string name="total_qty">Total Qty</string>
	<string name="recipient_name">Recipient Name</string>
	<string name="recipient_address">Recipient Address</string>
	<string name="delivery">Delivery</string>
	<string name="sales">sales</string>
	<string name="driver_name">Driver Name</string>
	<string name="identity_no">Identity No</string>
	<string name="driver_contact_no">Driver Contact No</string>
	<string name="driver_address">Driver Address</string>
	<string name="vehicle_name">Vehicle Name</string>
	<string name="vehicle_no">Vehicle No</string>
	<string name="email">Email</string>
	<string name="title_activity_customer_detail">View Customer Detail</string>
	<string name="customer">Customer:</string>
	<string name="invoice_date">Invoice Date: </string>
	<string name="company_name">Company Name</string>
	<string name="company_account">Account No.</string>
	<string name="company_do">DO No.</string>
	<string name="company_term">Term</string>
	<string name="days">\u0020Days</string>
	<string name="company_billing_address">Billing Address</string>
	<string name="company_total">Total Amount</string>
	<string name="rm">RM\u0020</string>
	<string name="title_activity_invoice_detail">Invoice Details</string>
	<string name="discount">Disc(%)\u0020</string>
	<string name="qty">QTY</string>
	<string name="unit">Unit</string>
	<string name="company_roc">ROC</string>
	<string name="salesperson">Salesperson</string>
	<string name="back_to_dashboard">Back to Dashboard</string>
	<string name="error_something_wrong">Opps, something went wrong</string>
	<string name="error_empty_orders">Opps, there is no order available at the moment</string>
	<string name="track_order">Track Order</string>
	<string name="error">We are unable to process the request at the moment. Please try again later.</string>
	<string name="order_success">Order successfully created</string>
	<string name="my_cart">My Cart</string>
	<string name="no_information_available">No information available</string>
	<string name="set_quantity">Set Quantity</string>
	<string name="ok">OK</string>
	<string name="item_quantity">Quantity</string>
	<string name="search_product_name">Search product name</string>
	<string name="search">Search</string>
	<string name="item_sales_price_history">Item Sales Price History</string>
	<string name="browse_customer">Browse My Customers</string>
	<string name="sales_price">Sales Price</string>
	<string name="uom">UOM</string>
	<string name="total">Total</string>
	<string name="info_date">Date</string>
	<string name="info_doc_no">Doc No.</string>
	<string name="info_u_price">U_Price</string>
	<string name="amount">Amount</string>
</resources>
