<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group
            android:id="@+id/menu_customer"
            android:checkableBehavior="single">
        <item
            android:id="@+id/btn_browse_product"
            android:icon="@drawable/ic_home_black"
            android:title="@string/browse_product" />
        <item
            android:id="@+id/btn_my_order"
            android:icon="@drawable/ic_order_drawer"
            android:title="@string/my_order"/>
        <item
            android:id="@+id/btn_my_invoice"
            android:icon="@drawable/ic_invoice"
            android:title="@string/my_invoice"/>
        
        <item
                android:id="@+id/btn_item_sales_price_history"
                android:icon="@drawable/ic_invoice"
                android:title="@string/item_sales_price_history"/>
        <item
            android:id="@+id/btn_my_statement"
            android:icon="@drawable/ic_download"
            android:title="@string/my_statement"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
    <!---->
        <!--<item-->
                <!--android:id="@+id/customers"-->
                <!--android:icon="@drawable/ic_group"-->
                <!--android:title="@string/my_customers"-->
                <!--android:visible="false"/>-->
        
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    
    <group android:id="@+id/menu_sales"
            android:visible="false"
            android:checkableBehavior="single">
        
        <item
                android:id="@+id/sales_customer"
                android:icon="@drawable/ic_group"
                android:title="@string/browse_customer"/>
        
        <item
                android:id="@+id/sales_products"
                android:icon="@drawable/ic_home_black"
                android:title="@string/browse_product"/>
        
        <item
                android:id="@+id/sales_profile"
                android:icon="@drawable/ic_user"
                android:title="@string/profile"/>
        
        <item
                android:id="@+id/sales_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout"/>
        
        <item
                android:id="@+id/customer_name"
                android:title="@string/customer">
            <menu>
                <item
                        android:id="@+id/customer_order"
                        android:icon="@drawable/ic_order_drawer"
                        android:title="@string/my_order"/>
                <item
                        android:id="@+id/customer_invoices"
                        android:icon="@drawable/ic_invoice"
                        android:title="@string/my_invoice"/>
                <item
                        android:id="@+id/customer_item_sales_price_history"
                        android:icon="@drawable/ic_invoice"
                        android:title="@string/item_sales_price_history"/>
                <item
                        android:id="@+id/customer_statement"
                        android:icon="@drawable/ic_download"
                        android:title="@string/my_statement"/>
            </menu>
        </item>
    </group>

</menu>
