<layout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		tools:context="addam.com.my.chinlaicustomer.feature.myorderdetail.fragment.OrderInformationFragment">
	<data>
		<variable
				name="model"
				type="addam.com.my.chinlaicustomer.rest.model.deliverydetails.OrderDriverDetailResponse.Data.DO"/>
	</data>
	
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		
		<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/space_small_12dp">
			<TextView
					android:id="@+id/tv_driver_name_label"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:text="@string/driver_name"
					android:textAllCaps="true"/>
			<TextView
					android:id="@+id/tv_driver_name"
					app:layout_constraintTop_toBottomOf="@id/tv_driver_name_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.driverName}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_identity_no_label"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:text="@string/identity_no"
					android:textAllCaps="true"/>
			<TextView
					android:id="@+id/tv_identity_no"
					app:layout_constraintTop_toBottomOf="@id/tv_identity_no_label"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.driverIc}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_driver_contact_no_label"
					app:layout_constraintTop_toBottomOf="@id/tv_driver_name"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginTop="@dimen/space_small_12dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:textAllCaps="true"
					android:text="@string/driver_contact_no"/>
			<TextView
					android:id="@+id/tv_driver_contact_no"
					app:layout_constraintTop_toBottomOf="@id/tv_driver_contact_no_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.driverContact}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_driver_address_label"
					app:layout_constraintTop_toBottomOf="@id/tv_driver_contact_no"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginTop="@dimen/space_small_12dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:textAllCaps="true"
					android:text="@string/driver_address"/>
			<TextView
					android:id="@+id/tv_driver_address"
					app:layout_constraintTop_toBottomOf="@id/tv_driver_address_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.driverAddress}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_vehicle_name_label"
					app:layout_constraintTop_toBottomOf="@id/tv_driver_address"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginTop="@dimen/space_small_12dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:textAllCaps="true"
					android:text="@string/vehicle_name"/>
			<TextView
					android:id="@+id/tv_vehicle_name"
					app:layout_constraintTop_toBottomOf="@id/tv_vehicle_name_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.vehicleModel}"
					tools:text="text"/>
			
			<TextView
					android:id="@+id/tv_vehicle_no_label"
					app:layout_constraintTop_toBottomOf="@id/tv_driver_address"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginTop="@dimen/space_small_12dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:textAllCaps="true"
					android:text="@string/vehicle_no"/>
			<TextView
					android:id="@+id/tv_vehicle_no"
					app:layout_constraintTop_toBottomOf="@id/tv_vehicle_name_label"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.vehiclePlate}"
					tools:text="text"/>
		</android.support.constraint.ConstraintLayout>
	</ScrollView>

</layout>


