<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
	<data>
		<variable
				name="item"
				type="addam.com.my.chinlaicustomer.rest.model.salesitemhistory.Item"/>
		<variable
				name="number"
				type="String"/>
	</data>
	
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<LinearLayout
				android:id="@+id/row_header"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:background="@color/grey_light_medium"
				android:weightSum="16">
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/info_no"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/info_date"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/info_doc_no"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/qty"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/uom"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/info_u_price"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/discount"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_2dp"
					style="@style/BaseTextView.OpenSansBold"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@string/amount"/>
		</LinearLayout>
		
		<LinearLayout
				android:id="@+id/row_item"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="16">
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@{number}"
					tools:text="1"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="3"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@{item.date}"
					tools:text="2019-04-19"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="start"
					android:text="@{item.docNum}"
					tools:text="DO-10-000005"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="end"
					android:textAlignment="viewEnd"
					android:text="@{item.quantity}"
					tools:text="1"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="end"
					android:textAlignment="viewEnd"
					android:text="@{item.uom}"
					tools:text="Bundle"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="end"
					android:textAlignment="viewEnd"
					android:text="@{item.sales_price}"
					tools:text="101.96"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="end"
					android:textAlignment="viewEnd"
					android:text="@{item.discount}"
					tools:text="5"/>
			<TextView
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:background="@drawable/border_shape_rect"
					android:padding="@dimen/space_tiny_4dp"
					style="@style/BaseTextView.OpenSansRegular"
					android:textColor="@color/black"
					android:textSize="@dimen/small_text_10sp"
					android:layout_gravity="end"
					android:textAlignment="viewEnd"
					android:text="@{Double.toString(item.total)}"
					tools:text="203.9"/>
		</LinearLayout>
	</LinearLayout>

</layout>