<layout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		tools:context="addam.com.my.chinlaicustomer.feature.myorderdetail.fragment.OrderInformationFragment">
	<data>
		<variable
				name="model"
				type="addam.com.my.chinlaicustomer.rest.model.deliverydetails.OrderDeliveryDetailResponse.OrderDeliveryData.DO"/>
	</data>
	
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">
	
		<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/space_small_12dp">
			<TextView
					android:id="@+id/tv_delivery_type_label"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:text="@string/type"
					android:textAllCaps="true"/>
			<TextView
					android:id="@+id/tv_delivery_type"
					app:layout_constraintTop_toBottomOf="@id/tv_delivery_type_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.type.equals(`DO`) ? @string/delivery : @string/sales}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_total_quantity_label"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:text="@string/total_qty"
					android:textAllCaps="true"/>
			<TextView
					android:id="@+id/tv_total_quantity"
					app:layout_constraintTop_toBottomOf="@id/tv_total_quantity_label"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{Math.round(safeUnbox(Double.valueOf(model.totalItems))) + ``}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_recipient_name_label"
					app:layout_constraintTop_toBottomOf="@id/tv_total_quantity"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginTop="@dimen/space_small_12dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:textAllCaps="true"
					android:text="@string/recipient_name"/>
			<TextView
					android:id="@+id/tv_recipient_name"
					app:layout_constraintTop_toBottomOf="@id/tv_recipient_name_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.customerName}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_contact_no_label"
					app:layout_constraintTop_toBottomOf="@id/tv_recipient_name"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginTop="@dimen/space_small_12dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:textAllCaps="true"
					android:text="@string/contact_no"/>
			<TextView
					android:id="@+id/tv_contact_no"
					app:layout_constraintTop_toBottomOf="@id/tv_contact_no_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.customerContact}"
					tools:text="text"/>
			<TextView
					android:id="@+id/tv_recipient_address_label"
					app:layout_constraintTop_toBottomOf="@id/tv_contact_no"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginTop="@dimen/space_small_12dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@color/grey"
					android:textSize="@dimen/small_text_12sp"
					android:textAllCaps="true"
					android:text="@string/recipient_address"/>
			<TextView
					android:id="@+id/tv_recipient_address"
					app:layout_constraintTop_toBottomOf="@id/tv_recipient_address_label"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textAllCaps="true"
					android:text="@{model.cbranchAddress}"
					tools:text="text"/>
		</android.support.constraint.ConstraintLayout>
	</ScrollView>

</layout>


